Changelog
=========

Here you can see the full list of changes between each Cerberus release.

Version 0.10
------------

Not released yet.

- New: Add testing with Docker (Frank Sachsenheim)
- New: '*of'-rules can be extended by concentating another rule (Frank
  Sachsenheim).

- Change: The processed root-document of is now available as 'root_document'-
  property of the (child-)Validator (Frank Sachsenheim).
- Change: Removed 'context'-argument from 'validate'-method as this is set
  upon the creation of a child-validator (Frank Sachsenheim).


Version 0.9.1
-------------

Released on July 7 2015

- Fix: 'required' is always evaluated, independent of eventual missing
  dependencies. This changes the previous behaviour whereas a required field
  with dependencies would only be reported as missing if all dependencies were
  met. A missing required field will always be reported. Also see the
  discussion in https://github.com/nicolaiarocci/eve/pull/665.

Version 0.9
-----------

Released on June 24 2015.
Codename: 'Mastrolindo'.

- New: 'oneof' rule which provides a list of definitions in which only one
  should validate (C.D. Clark III).
- New: 'noneof' rule which provides a list of definitions that should all not
  validate (C.D. Clark III).
- New: 'anyof' rule accepts a list of definitions and checks that one
  definition validates (C.D. Clark III).
- New: 'allof' rule validates if if all definitions validate (C.D. Clark III).
- New: 'validator.validated' takes a document as argument and returns
  a validated document or 'None' if validation failed (Frank Sachsenheim).
- New: PyPy support (Frank Sachsenheim).
- New: Type coercion (Brett).
- New: Added 'propertyschema' validation rule (Frank Sachsenheim).

- Change: Use 'str.format' in error messages so if someone wants to override
  them does not get an exception if arguments are not passed. Closes #105
  (Brett).
- Change: 'keyschema' renamed to 'valueschema', print a deprecation warning
  (Frank Sachsenheim).