@@ -21,6 +21,7 @@ ERROR_NOT_NULLABLE = "null value not allowed"
 ERROR_READONLY_FIELD = "field is read-only"
 ERROR_REGEX = "value does not match regex '{0}'"
 ERROR_REQUIRED_FIELD = "required field"
+ERROR_SCHEMA_COERCE = "the coerce-definition must be a callable"
 ERROR_SCHEMA_FORMAT = "'{0}' is not a schema, must be a dict"
 ERROR_SCHEMA_MISSING = "validation schema missing"
 ERROR_SCHEMA_TYPE = "type of field '{0}' must be either 'list' or 'dict'"
