@@ -8,15 +8,20 @@ Version 0.10
 
 Not released yet.
 
-- New: Add testing with Docker (Frank Sachsenheim)
+- New: Add testing with Docker (Frank Sachsenheim).
 - New: '*of'-rules can be extended by concentating another rule (Frank
   Sachsenheim).
+- New: Known, validated definition schemas are cached, thus validation run-time
+  of schemas is reduced (Frank Sachsenheim).
+- New: Implemented rules of a Validator-instance are accessible as
+  'validation_rules'-property (Frank Sachsenheim).
 
 - Change: The processed root-document of is now available as 'root_document'-
   property of the (child-)Validator (Frank Sachsenheim).
 - Change: Removed 'context'-argument from 'validate'-method as this is set
   upon the creation of a child-validator (Frank Sachsenheim).
 
+- Fix: 'coerce'-constraints are validated (Frank Sachsenheim).
 
 Version 0.9.1
 -------------
